# FAN_AI_LEARN

./: .env.example  .gitignore  01-核心业务流程.html  03-扩展功能与社交.html  FEATURES.md  README.md  VERSION.md  docker-compose.yml  mascot-options.html  serve-h5.py  serve.py  需求分析文档（纯净版）.md
UI/: 02-学习复盘与个人中心.html
backend/: Dockerfile  init.sql  pyproject.toml  start.sh
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  quiz.py  user.py
backend/app/chains/: __init__.py  domain_validation.py  knowledge_search.py  quiz_generation.py  quiz_validation.py  result_analysis.py
backend/app/models/: __init__.py  api.py  quiz.py  user_orm.py  user_schemas.py
backend/app/prompts/: domain_validation.py  knowledge_search.py  quiz_generation.py  quiz_validation.py  result_analysis.py
backend/app/services/: auth.py  points.py
backend/app/utils/: sse.py
backend/tests/: conftest.py  test_analyze_with_user.py  test_api.py  test_auth.py  test_points.py  test_quiz_generation.py  test_quiz_validation.py  test_result_analysis.py  test_user_api.py
docs/: 方案设计文档.md  方案设计文档输出计划（原始草稿）.md  用户系统-方案设计文档.md  用户系统-需求分析文档.md  需求分析文档（原始草稿）.md
frontend/: Dockerfile  babel.config.js  package-lock.json  package.json  project.config.json  tsconfig.json
frontend-web/: index.html  package-lock.json  package.json  vite.config.ts
frontend-web/src/: App.tsx
frontend-web/src/components/: Mascot.tsx
frontend-web/src/services/: api.ts
frontend/config/: dev.ts  index.ts  prod.ts
frontend/scripts/: post-build-weapp.sh
frontend/src/: app.boot.ts  app.config.ts  app.h5.scss  app.scss  app.tsx  index.html  keyframes.wxss
(+60 files in other folders)
