[tool.poetry]
name = "ai-quiz-backend"
version = "0.1.0"
description = "AI Quiz Platform Backend - FastAPI + LangChain"
authors = ["dev <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
langchain-openai = "^0.3.0"
langchain-core = "^0.3.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncmy = "^0.2.9"
PyJWT = "^2.9.0"
greenlet = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
